--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="shuriken.svg" />
+    <meta name="google-adsense-account" content="ca-pub-7109645683357685" />
   </head>
   <body>
     <nu-root></nu-root>
